--- a/discovery.yaml
+++ b/discovery.yaml
@@ -13,15 +13,15 @@ eureka:
     registerWithEureka: false
     fetchRegistry: false
     healthcheck:
-      enabled: true
+      enabled: false
   server:
-    enableSelfPreservation: true
+    enableSelfPreservation: false
     renewalPercentThreshold: 0.1
     waitTimeInMsWhenSyncEmpty: 0
   instance:
     registryFetchIntervalSeconds: 3600
     leaseRenewalIntervalInSeconds: 3600
-    preferIpAddress: true
+    preferIpAddress: false
   dashboard:
     enabled: true
 
