--- a/discovery.yaml
+++ b/discovery.yaml
@@ -15,32 +15,32 @@ eureka:
   dashboard:
     enabled: true
 
----
-
-spring:
-  profiles: discovery1
-
-server:
-  port: 8761
-
-eureka:
-  client:
-    registerWithEureka: true
-    fetchRegistry: false
-    serviceUrl:
-      defaultZone: http://localhost:8762/eureka/
-
----
-
-spring:
-  profiles: discovery2
-
-server:
-  port: 8762
-
-eureka:
-  client:
-    registerWithEureka: true
-    fetchRegistry: false
-    serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
+#---
+#
+#spring:
+#  profiles: discovery1
+#
+#server:
+#  port: 8761
+#
+#eureka:
+#  client:
+#    registerWithEureka: true
+#    fetchRegistry: false
+#    serviceUrl:
+#      defaultZone: http://localhost:8762/eureka/
+#
+#---
+#
+#spring:
+#  profiles: discovery2
+#
+#server:
+#  port: 8762
+#
+#eureka:
+#  client:
+#    registerWithEureka: true
+#    fetchRegistry: false
+#    serviceUrl:
+#      defaultZone: http://localhost:8761/eureka/
