--- a/discovery.yaml
+++ b/discovery.yaml
@@ -12,35 +12,31 @@ eureka:
   client:
     registerWithEureka: false
     fetchRegistry: false
+  instance:
+    hostname: localhost
   dashboard:
     enabled: true
 
-#-----------------------------------------------------------------------------------------------------------------------
+---
 
 spring:
   profiles: discovery1
 
-server:
-  port: 8761
-
 eureka:
+  instance:
+    hostname: 8761
   client:
-    registerWithEureka: true
-    fetchRegistry: false
     serviceUrl:
       defaultZone: http://localhost:8762/eureka/
 
-#-----------------------------------------------------------------------------------------------------------------------
+---
 
 spring:
   profiles: discovery2
 
-server:
-  port: 8762
-
 eureka:
+  instance:
+    hostname: 8762
   client:
-    registerWithEureka: true
-    fetchRegistry: false
     serviceUrl:
       defaultZone: http://localhost:8761/eureka/
