--- a/discovery.yaml
+++ b/discovery.yaml
@@ -4,16 +4,14 @@ server:
 spring:
   application:
     name: discovery
-#  cloud:
-#    client:
-#      hostname: localhost
+  cloud:
+    client:
+      hostname: localhost
 
 eureka:
   client:
     registerWithEureka: false
     fetchRegistry: false
-  instance:
-    hostname: localhost
   dashboard:
     enabled: true
 
