--- a/discovery.yaml
+++ b/discovery.yaml
@@ -14,27 +14,27 @@ eureka:
     fetchRegistry: false
   dashboard:
     enabled: true
-#
-#---
-#
-#spring:
-#  profiles: discovery1
-#
-#eureka:
-#  instance:
-#    hostname: 8761
-#  client:
-#    serviceUrl:
-#      defaultZone: http://localhost:8762/eureka/
-#
-#---
-#
-#spring:
-#  profiles: discovery2
-#
-#eureka:
-#  instance:
-#    hostname: 8762
-#  client:
-#    serviceUrl:
-#      defaultZone: http://localhost:8761/eureka/
+
+---
+
+spring:
+  profiles: discovery1
+
+eureka:
+  instance:
+    hostname: 8761
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8762/eureka/
+
+---
+
+spring:
+  profiles: discovery2
+
+eureka:
+  instance:
+    hostname: 8762
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka/
