--- a/micro-service-authentication.properties
+++ b/micro-service-authentication.properties
@@ -3,7 +3,7 @@ spring.application.name=authentication
 
 spring.cloud.client.hostname=localhost
 
-eureka.client.serviceUrl.defaultZone=http://127.0.0.1:8761/eureka,http://127.0.0.1:8762/eureka
+eureka.client.serviceUrl.defaultZone=http://127.0.0.1:8761/eureka/
 eureka.instance.preferIpAddress=true
 
 management.security.enabled=false
