--- a/discovery.yaml
+++ b/discovery.yaml
@@ -25,7 +25,7 @@ eureka:
     hostname: 8761
   client:
     serviceUrl:
-      defaultZone: http://localhost:8762/eureka/
+      defaultZone: http://127.0.0.1:8762/eureka/
 
 ---
 
@@ -37,4 +37,4 @@ eureka:
     hostname: 8762
   client:
     serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://127.0.0.1:8761/eureka/
