--- a/discovery.yaml
+++ b/discovery.yaml
@@ -67,4 +67,4 @@ eureka:
     registerWithEureka: true
     fetchRegistry: false
     serviceUrl:
-      defaultZone: http://127.0.0.1:8761/eureka/
+      defaultZone: 'http://127.0.0.1:8761/eureka/'
