--- a/discovery.yaml
+++ b/discovery.yaml
@@ -1,70 +1,70 @@
 server:
-  port: 8761
+    port: 8761
 
 spring:
-  application:
-    name: discovery
-  cloud:
-    client:
-      hostname: localhost
+    application:
+        name: discovery
+    cloud:
+        client:
+            hostname: localhost
 
 eureka:
-  client:
-    registerWithEureka: false
-    fetchRegistry: false
-    healthcheck:
-      enabled: true
-  server:
-    enableSelfPreservation: true
-    renewalPercentThreshold: 0.1
-    waitTimeInMsWhenSyncEmpty: 0
-  instance:
-    registryFetchIntervalSeconds: 3600
-    leaseRenewalIntervalInSeconds: 3600
-    preferIpAddress: true
-  dashboard:
-    enabled: true
+    client:
+        registerWithEureka: false
+        fetchRegistry: false
+        healthcheck:
+            enabled: true
+    server:
+        enableSelfPreservation: false
+        renewalPercentThreshold: 0.1
+        waitTimeInMsWhenSyncEmpty: 0
+    instance:
+        registryFetchIntervalSeconds: 3600
+        leaseRenewalIntervalInSeconds: 3600
+        preferIpAddress: true
+    dashboard:
+        enabled: false
 
 management:
-  security:
-    enabled: false
+    security:
+        enabled: false
 
 endpoints:
-  sensitive: false
-  mappings:
     sensitive: false
+    mappings:
+        sensitive: false
 
 
 http:
-  mappers:
-    json-pretty-print: true
+    mappers:
+        json-pretty-print: true
 
 ---
 
 spring:
-  profiles: discovery1
+    profiles: discovery1
 
 server:
-  port: 8761
+    port: 8761
 
 eureka:
-  client:
-    registerWithEureka: true
-    fetchRegistry: false
-    serviceUrl:
-      defaultZone: http://127.0.0.1:8762/eureka/
+    client:
+        registerWithEureka: true
+        fetchRegistry: false
+        serviceUrl:
+            defaultZone: http://127.0.0.1:8762/eureka/
 
 ---
 
 spring:
-  profiles: discovery2
+    profiles: discovery2
 
 server:
-  port: 8762
+    port: 8762
 
 eureka:
-  client:
-    registerWithEureka: true
-    fetchRegistry: false
-    serviceUrl:
-      defaultZone: 'http://127.0.0.1:8761/eureka/'
+    client:
+        registerWithEureka: true
+        fetchRegistry: false
+        serviceUrl:
+            defaultZone: http://127.0.0.1:8761/eureka/
